apps/arr/qbittorrent/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent
  labels:
    app.kubernetes.io/name: qbittorrent
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: ${INTERNAL_INGRESS_CLASS}
  tls:
    - hosts:
        - "qbittorrent.${INTERNAL_DOMAIN}"
      secretName: "qbittorrent-tls"
  rules:
    - host: "qbittorrent.${INTERNAL_DOMAIN}"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: qbittorrent
                port:
                  number: 8080
